# oe-alliance-plugins

./: .gitignore  .pylintrc  .sonarcloud.properties  .travis.yml  Makefile.am  README.md  Rules-cpp.mak  Rules-po.mak  Rules_noxml-po.mak  build.sh  configure.ac  sonar-project.properties  updateallpo-multiOS.sh  updateallpo.sh  xml2po.py
.github/workflows/: SonarCloud.yml  buildbot.yml  oe-alliance-plugins-py27.yml  oe-alliance-plugins-py3.10.yml  oe-alliance-plugins-py3.11.yml  oe-alliance-plugins-py3.9.yml  oe-alliance-plugins.yml  pylint.yml
3GModemManager/CONTROL/: control
3GModemManager/po/: 3GModemManager.pot  3GModemManager.pot  Makefile.am  de.po  fr.po  it.po  lt.po  nl.po  ru.po  sk.po  uk.po
3GModemManager/src/: 3gcommand  Makefile.am  __init__.py  apnlist.xml  plugin.py
ABMCustomMixImporter/: Makefile.am
ABMCustomMixImporter/CONTROL/: control
ABMCustomMixImporter/meta/: Makefile.am  maintainer.info  plugin_abmcustommiximporter.xml
ABMCustomMixImporter/mixes/: Makefile.am  dsayers_skyirl.xml  dsayers_skyuk.xml  dsayers_skyuk_fta_into_vmuk.xml  dsayers_skyuk_import_vmuk_no_hd_sports.xml  dsayers_vmuk_import_skyuk_fta_no_hd_sports.xml  dsayers_vmuk_into_skyuk.xml  whitelist_skyirl.xml  whitelist_skyuk.xml
ABMCustomMixImporter/po/: ABMCustomMixImporter.pot  Makefile.am  de.po  fr.po  it.po  lt.po  nl.po
ABMCustomMixImporter/src/: Makefile.am  __init__.py  mixes.py  plugin.py  setup.xml
AboutBoxBranding/CONTROL/: control
AboutBoxBranding/meta/: Makefile.am  plugin_aboutboxbranding.xml
AboutBoxBranding/po/: AboutBoxBranding.pot  Makefile.am  fi.po  it.po  nl.po
AboutBoxBranding/src/: Makefile.am  __init__.py  plugin.py
AnimationSetup/meta/: Makefile.am  plugin_animationsetup.xml
AnimationSetup/po/: AnimationSetup.pot  Makefile.am  de.po  fi.po  fr.po  it.po  lt.po  nl.po  pl.po  ru.po  tr.po  uk.po
AnimationSetup/src/: Makefile.am  plugin.py
AudioEffect/meta/: Makefile.am  plugin_audioeffect.xml
AudioEffect/po/: AudioEffect.pot  Makefile.am  de.po  en.po  en_GB.po  fr.po  it.po  lt.po  nl.po  ru.po  tr.po  uk.po
AudioEffect/src/: Makefile.am  __init__.py  keymap.xml  plugin.py
AutoBouquets/: Makefile.am
AutoBouquets/CONTROL/: control  postinst  postrm  preinst
AutoBouquets/meta/: Makefile.am  plugin_autobouquets.xml
AutoBouquets/po/: Makefile.am  en.po  en_GB.po  nl.po
AutoBouquets/script/: Makefile.am
AutoBouquets/src/: Makefile.am  __init__.py  autobouquets_e2.sh  plugin.py  readme.txt
AutoBouquetsMaker/: Makefile.am
AutoBouquetsMaker/CONTROL/: control  preinst
AutoBouquetsMaker/custom/: Makefile.am  README.txt  hd_sat_192_de_PSB1_CustomLCN.xml  hd_sat_192_de_PSB1_CustomradioLCN.xml  hd_sat_192_sky_deutschland_CustomLCN.xml  hd_sat_192_tntsat_CustomLCN.xml  hd_sat_192_tntsat_CustomradioLCN.xml  hd_sat_3550_fransat_CustomLCN.xml  hd_sat_420_turksat_CustomLCN.xml  hd_sat_420_turksat_CustomradioLCN.xml  hd_sat_sky_deutschland_CustomLCN.xml  terrestrial_GB_freeview_Custom_transponder.xml  (+2 more)
CI/: build.sh
Chefkoch/: __init__.py  plugin.py
DLNABrowser/: Makefile.am
LCD4linux/src/: FritzCallUserAction.sh  History.txt  LICENSE  Makefile.am  Photoframe.py  WebConfigSite.py  WebSite.py  __init__.py  bluesound.py  dpf.py  module.py  myFileList.py  ping.py  plugin.py  utils.py  ymc.py
LCD4linux/src/arm/: Makefile.am
LCD4linux/src/data/: Makefile.am  default.bwlcd255  default.colorlcd220  default.colorlcd400  default.colorlcd480  default.colorlcd800  default.et8500  default.gigablue  default.hd2400  default.lcd  default.quadplus  default.solo4k  default.vuduo2  skin_data.xml
LCD4linux/src/data/Clock1/: Makefile.am
LCD4linux/src/data/Clock10/: Makefile.am
LCD4linux/src/data/Clock11/: Makefile.am
LCD4linux/src/data/Clock12/: Makefile.am
LCD4linux/src/data/Clock13/: Makefile.am
LCD4linux/src/data/Clock14/: Makefile.am
LCD4linux/src/data/Clock15/: Makefile.am
LCD4linux/src/data/Clock16/: Makefile.am
LCD4linux/src/data/Clock17/: Makefile.am
LCD4linux/src/data/Clock18/: Makefile.am
LCD4linux/src/data/Clock19/: Makefile.am
LCD4linux/src/data/Clock2/: Makefile.am
LCD4linux/src/data/Clock20/: Makefile.am
LCD4linux/src/data/Clock21/: Makefile.am
LCD4linux/src/data/Clock22/: Makefile.am
LCD4linux/src/data/Clock23/: Makefile.am
LCD4linux/src/data/Clock24/: Makefile.am
LCD4linux/src/data/Clock25/: Makefile.am
LCD4linux/src/data/Clock26/: Makefile.am
LCD4linux/src/data/Clock27/: Makefile.am
LCD4linux/src/data/Clock28/: Makefile.am
LCD4linux/src/data/Clock3/: Makefile.am
LCD4linux/src/data/Clock4/: Makefile.am
LCD4linux/src/data/Clock5/: Makefile.am
LCD4linux/src/data/Clock6/: Makefile.am
LCD4linux/src/data/Clock7/: Makefile.am
LCD4linux/src/data/Clock8/: Makefile.am
LCD4linux/src/data/Clock9/: Makefile.am
LCD4linux/src/data/audio/: Makefile.am
LCD4linux/src/meteo/: Makefile.am  meteo-template.html
LCD4linux/src/renderer/: Makefile.am  PixmapLcd4linux.py
LCD4linux/src/wetter/: Makefile.am
MICOMUpgrade/: Makefile.am
OnDemand/: Makefile.am
OpenUitzendingGemist/: Makefile.am
RCUSelect/: Makefile.am
StreamTV/: Makefile.am
TerrestrialScan/: Makefile.am
VuBluetoothSetup/src/: Makefile.am  OTAUpdate.py  bt.py  bt_config.py  bt_scan.py  bt_setup.py  bt_task.py  bt_types.py  keymap.xml  plugin.py  vubt.py
VuBluetoothSetup/src/vuultimo4k/: Makefile.am
VuStalker/src/: Makefile.am  SCChannels.py  SCConfig.py  SCEPG.py  SCInfo.py  SCPlayer.py  plugin.py  stalkerclient.py
VuStalker/src/vuduo4k/: Makefile.am
WebBrowser/: Makefile.am
WebkitHbbTV/: Makefile.am
po/: Makefile.am
src/: Makefile.am
src/SystemPlugins/: Makefile.am
src/SystemPlugins/Blindscan/: Makefile.am
src/SystemPlugins/FPGAUpgrade/: Makefile.am
src/SystemPlugins/FirmwareUpgrade/: Makefile.am
src/SystemPlugins/RemoteControlCode/: Makefile.am
src/SystemPlugins/SABnzbdSetup/: Makefile.am
src/SystemPlugins/TmTwinFanControl/: Makefile.am
src/SystemPlugins/VFDGiga/: Makefile.am
src/SystemPlugins/VuDuoFanControl/: Makefile.am
src/SystemPlugins/VuUnoFanControl/: Makefile.am
(+2271 files in other folders)
