ACLOCAL_AMFLAGS = -I m4

SUBDIRS = AutoBouquetsMaker DLNABrowser DLNAServer StreamTV 3GModemManager TunerServer OnDemand Fempa LCD4linux RemoteChannelStreamConverter BTDevicesManager

if HAVE_WIRELESSACCESSPOINT
SUBDIRS += WirelessAccessPoint
endif

if AZBOX
SUBDIRS += Blindscan
endif

if VUPLUS
SUBDIRS += VuplusEvent HbbTV AudioEffect
endif

if XTREND
SUBDIRS += XtrendFancontrol Blindscan XtrendRemote
endif

if ET10000
SUBDIRS += MultiTransCodingSetup
endif

if HD2400
SUBDIRS += XtrendFancontrol XtrendRemote MultiTransCodingSetup
endif

if HD1100
SUBDIRS += F3LEDControl XtrendRemote
endif

if ODIN
SUBDIRS += XtrendFancontrol Blindscan
endif

if ODINM7
SUBDIRS += OdinM7VFDControl
endif

if ODINM7S
SUBDIRS += OdinM7VFDControl
endif

if ODINM7C
SUBDIRS += OdinM7VFDControl
endif

if EW7358
SUBDIRS += EWVFDControl
endif

if EW7362
SUBDIRS += EWVFDControl
endif

if EW7356
SUBDIRS += MultiTransCodingSetup
endif

if INIHDE
SUBDIRS += INIVFDControl
endif

if INIHDE2
SUBDIRS += INIVFDControl
endif

if INI
SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade
endif

if INIHDP
SUBDIRS += MultiTransCodingSetup
endif

if FORMULER3
SUBDIRS += F3LEDControl
endif

if VG2000
SUBDIRS += F3LEDControl
endif

if VG5000
SUBDIRS += F3LEDControl
endif

if SH1
SUBDIRS += F3LEDControl
endif

if VP7358CI
SUBDIRS += VPLEDControl
endif

if VUUNO
SUBDIRS += FirmwareUpgrade Blindscan VuRemote
endif

if VUULTIMO
SUBDIRS += FirmwareUpgrade Blindscan VuRemote
endif

if VUDUO
SUBDIRS += VuDuoFanControl
endif

if VUSOLO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup Blindscan
endif

if VUSOLOSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup Blindscan
endif

if VUDUO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup Blindscan
endif

if VUZERO
SUBDIRS += FirmwareUpgrade VuRemote Blindscan
endif

if GIGABLUE
SUBDIRS += GigaBlueVFDControl Blindscan AudioEffect
endif

if XP1000
SUBDIRS += XtrendRemote SF8VFDControl
endif

if SPARK
SUBDIRS += SparkVFDControl SparkUnionTunerType SH4BoosterControl SH4OSDAdjustment
endif


if HAVE_TEMPFANCONTROL
SUBDIRS += TempFanControl
endif

if GBQUADPLUS
SUBDIRS += AudioEffect TransCodingSetup
endif

if GBQUAD
SUBDIRS += AudioEffect TransCodingSetup
endif

if GB800SEPLUS
SUBDIRS += AudioEffect
endif

if GB800UEPLUS
SUBDIRS += AudioEffect
endif
