ACLOCAL_AMFLAGS = -I m4

SUBDIRS = Blindscan DLNABrowser DLNAServer StreamTV 3GModemManager TunerServer OnDemand Fempa LCD4linux RemoteChannelStreamConverter BTDevicesManager SatipClient TerrestrialScan

if MIPSEL
SUBDIRS += WirelessAccessPoint
endif

if DAGS3
SUBDIRS += TransCodingSetup
endif

if DAGS4
SUBDIRS += TransCodingSetup
endif

if DAGS7356
SUBDIRS += TransCodingSetup
endif

if DREAMBOX
SUBDIRS +=  DMBlindscan
endif

if XTREND
SUBDIRS += XtrendFancontrol XtrendRemote
endif

if ET10000
SUBDIRS += MultiTransCodingSetup
endif

if G100
SUBDIRS += F3LEDControl
endif

if G101
SUBDIRS += F3LEDControl
endif

if HD2400
SUBDIRS += XtrendFancontrol XtrendRemote MultiTransCodingSetup
endif

if HD1100
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1200
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1265
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1500
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD500C
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD530C
SUBDIRS += F3LEDControl XtrendRemote
endif

if ODIN
SUBDIRS += XtrendFancontrol
endif

if ODINM7
SUBDIRS += OdinM7VFDControl
endif

if ODINM7S
SUBDIRS += OdinM7VFDControl
endif

if ODINM7C
SUBDIRS += OdinM7VFDControl
endif

if PROTEK9900LX
SUBDIRS += OdinM7VFDControl
endif

if EW7358
SUBDIRS += EWVFDControl
endif

if EW7362
SUBDIRS += EWVFDControl
endif

if EW7356
SUBDIRS += MultiTransCodingSetup
endif

if INIHDE
SUBDIRS += INIVFDControl
endif

if INIHDE2
SUBDIRS += INIVFDControl
endif

if INI
SUBDIRS += VentonFancontrol MICOMUpgrade
endif

if INIHDP
SUBDIRS += MultiTransCodingSetup
endif

if FORMULER1
SUBDIRS += MultiTransCodingSetup
endif

if FORMULER3
SUBDIRS += F3LEDControl
endif

if FORMULER4
SUBDIRS += F3LEDControl
endif

if FORMULER4TURBO
SUBDIRS += F3LEDControl
endif

if VG2000
SUBDIRS += F3LEDControl
endif

if VG5000
SUBDIRS += F3LEDControl
endif

if JJ7362
SUBDIRS += F3LEDControl
endif

if S7220S
SUBDIRS += F3LEDControl
endif

if S7225S
SUBDIRS += F3LEDControl
endif

if S7300S
SUBDIRS += F3LEDControl
endif

if S7400S
SUBDIRS += F3LEDControl
endif

if SH1
SUBDIRS += F3LEDControl
endif

if H3
SUBDIRS += F3LEDControl
endif

if H5
SUBDIRS += F3LEDControl
endif

if LC
SUBDIRS += F3LEDControl
endif

if VUUNO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUULTIMO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUDUO
SUBDIRS += VuDuoFanControl
endif

if VUSOLO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUSOLOSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUDUO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUZERO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUSOLO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUUNO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUULTIMO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if GIGABLUE
SUBDIRS += GigaBlueVFDControl AudioEffect
endif

if XP1000
SUBDIRS += XtrendRemote SF8VFDControl
endif

if SPARK
SUBDIRS += SparkVFDControl SparkUnionTunerType SH4BoosterControl SH4OSDAdjustment
endif


if HAVE_TEMPFANCONTROL
SUBDIRS += TempFanControl
endif

if GBQUADPLUS
SUBDIRS += TransCodingSetup
endif

if GBQUAD
SUBDIRS += TransCodingSetup
endif

if GB7356
SUBDIRS += TransCodingSetup
endif

if VUPLUS
SUBDIRS += HbbTV AudioEffect
endif

if WETEK
SUBDIRS += RCUSelect ReZap
endif

if XC7362
SUBDIRS += VPLEDControl
endif

if XC7358
SUBDIRS += VPLEDControl
endif

if XC7358CI
SUBDIRS += VPLEDControl
endif