ACLOCAL_AMFLAGS = -I m4

SUBDIRS = ABMCustomMixImporter AboutBoxBranding Blindscan BTDevicesManager ChannelsImporter DLNABrowser DLNAServer EPGTranslator Fempa LCD4linux OnDemand RemoteChannelStreamConverter SatipClient StreamTV tmdb TunerServer xmlUpdate 3GModemManager Chefkoch PiconsUpdater TVSpielfilm

if MIPSEL
SUBDIRS += WirelessAccessPoint
endif

if DAGS3
SUBDIRS += TransCodingSetup
endif

if DAGS4
SUBDIRS += TransCodingSetup
endif

if DAGS7356
SUBDIRS += TransCodingSetup
endif

if DAGS7252
SUBDIRS += TransCodingSetup
endif

if DAGSMV200
SUBDIRS += MultiTransCodingSetup
endif

if DINOBOT
SUBDIRS += MultiTransCodingSetup
endif

if CC1
SUBDIRS += MultiTransCodingSetup
endif

if XTREND
SUBDIRS += XtrendFancontrol XtrendRemote
endif

if ET10000
SUBDIRS += MultiTransCodingSetup
endif

if ET13000
SUBDIRS += MultiTransCodingSetup
endif

if SF5008
SUBDIRS += MultiTransCodingSetup
endif

if G100
SUBDIRS += F3LEDControl
endif

if G101
SUBDIRS += F3LEDControl
endif

if HD51
SUBDIRS += F3LEDControl
endif

if ET1x000
SUBDIRS += F3LEDControl
endif

if HD2400
SUBDIRS += XtrendFancontrol XtrendRemote MultiTransCodingSetup
endif

if HD1100
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1200
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1265
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD1500
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD500C
SUBDIRS += F3LEDControl XtrendRemote
endif

if HD530C
SUBDIRS += F3LEDControl XtrendRemote
endif

if ODIN
SUBDIRS += XtrendFancontrol
endif

if ODINM7
SUBDIRS += OdinM7VFDControl
endif

if ODINM7S
SUBDIRS += OdinM7VFDControl
endif

if ODINM7C
SUBDIRS += OdinM7VFDControl
endif

if PROTEK9900LX
SUBDIRS += OdinM7VFDControl
endif

if EW7358
SUBDIRS += EWVFDControl
endif

if EW7362
SUBDIRS += EWVFDControl
endif

if EW7356
SUBDIRS += MultiTransCodingSetup
endif

if INIHDE
SUBDIRS += INIVFDControl
endif

if INIHDE2
SUBDIRS += INIVFDControl
endif

if INI
SUBDIRS += VentonFancontrol MICOMUpgrade
endif

if INIHDP
SUBDIRS += MultiTransCodingSetup
endif

if TIVIARAPLUS
SUBDIRS += MultiTransCodingSetup
endif

if FORMULER1TC
SUBDIRS += MultiTransCodingSetup
endif

if FORMULER3
SUBDIRS += F3LEDControl
endif

if FORMULER4
SUBDIRS += F3LEDControl
endif

if FORMULER3IP
SUBDIRS += F3LEDControl
endif

if FORMULER4IP
SUBDIRS += F3LEDControl
endif

if FORMULER4TURBO
SUBDIRS += F3LEDControl
endif

if TIVIARMIN
SUBDIRS += F3LEDControl
endif

if VG2000
SUBDIRS += F3LEDControl
endif

if VG5000
SUBDIRS += F3LEDControl
endif

if JJ7362
SUBDIRS += F3LEDControl
endif

if S7220S
SUBDIRS += F3LEDControl
endif

if S7225S
SUBDIRS += F3LEDControl
endif

if S7300S
SUBDIRS += F3LEDControl
endif

if S7400S
SUBDIRS += F3LEDControl
endif

if SF8008
SUBDIRS += MultiTransCodingSetup VPLEDControl
endif

if SF8008M
SUBDIRS += MultiTransCodingSetup VPLEDControl
endif

if SF8008OPT
SUBDIRS += MultiTransCodingSetup VPLEDControl
endif

if SFX6008
SUBDIRS += VPLEDControl
endif

if SX988
SUBDIRS += MultiTransCodingSetup
endif

if OG2OTT4K
SUBDIRS += MultiTransCodingSetup
endif

if VIPER4K
SUBDIRS += MultiTransCodingSetup VPLEDControl
endif

if GBMV200
SUBDIRS += MultiTransCodingSetup
endif

if USTYM4KPRO
SUBDIRS += MultiTransCodingSetup
endif

if USTYM4KOTTPREMIUM
SUBDIRS += MultiTransCodingSetup
endif

if BEYONWIZV2
SUBDIRS += MultiTransCodingSetup
endif

if S8100S
SUBDIRS += MultiTransCodingSetup
endif

if SH1
SUBDIRS += F3LEDControl
endif

if H3
SUBDIRS += F3LEDControl
endif

if H5
SUBDIRS += F3LEDControl
endif

if H7
SUBDIRS += F3LEDControl
endif

if H9
SUBDIRS += MultiTransCodingSetup
endif

if H9COMBO
SUBDIRS += MultiTransCodingSetup
endif

if H10
SUBDIRS += MultiTransCodingSetup
endif

if H11
SUBDIRS += MultiTransCodingSetup
endif

if HD60
SUBDIRS += MultiTransCodingSetup
endif

if HD61
SUBDIRS += MultiTransCodingSetup
endif

if HD66SE
SUBDIRS += MultiTransCodingSetup
endif

if PULSE4K
SUBDIRS += MultiTransCodingSetup
endif

if PULSE4KMINI
SUBDIRS += MultiTransCodingSetup
endif

if I55PLUS
SUBDIRS += MultiTransCodingSetup
endif

if LC
SUBDIRS += F3LEDControl
endif

if VUUNO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUULTIMO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUDUO
SUBDIRS += VuDuoFanControl
endif

if VUSOLO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUSOLOSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUDUO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUZERO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUSOLO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUUNO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUZERO4K
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUUNO4KSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUULTIMO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUDUO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUDUO4KSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if V8PLUS
SUBDIRS += MultiTransCodingSetup
endif

if MULTIBOX
SUBDIRS += MultiTransCodingSetup
endif

if MULTIBOXSE
SUBDIRS += MultiTransCodingSetup
endif

if GIGABLUE
SUBDIRS += GigaBlueVFDControl AudioEffect GigaBlueRemote
endif

if XP1000
SUBDIRS += XtrendRemote SF8VFDControl
endif

if SPARK
SUBDIRS += SparkVFDControl SparkUnionTunerType SH4BoosterControl SH4OSDAdjustment
endif

if OSMIO4K
SUBDIRS += SimpleFancontrol
endif

if HAVE_TEMPFANCONTROL
SUBDIRS += TempFanControl
endif

if GBQUADPLUS
SUBDIRS += TransCodingSetup
endif

if GBQUAD
SUBDIRS += TransCodingSetup
endif

if GB7356
SUBDIRS += TransCodingSetup
endif

if GB7252
SUBDIRS += TransCodingSetup
endif

if VS1000
SUBDIRS += F3LEDControl XtrendRemote
endif

if VUPLUS
SUBDIRS += HbbTV AudioEffect
endif

if HAVE_AMLPLUGINS
SUBDIRS += RCUSelect ReZap
endif

if XC7362
SUBDIRS += VPLEDControl
endif

if XC7358
SUBDIRS += VPLEDControl
endif

if XC7358CI
SUBDIRS += VPLEDControl
endif

if OSNINO
SUBDIRS += VPLEDControl
endif

if OSNINOPLUS
SUBDIRS += VPLEDControl
endif

if HAVE_LIBVUPLDEMO
SUBDIRS += libvupldemo
endif

if HAVE_VUSTALKER
SUBDIRS += VuStalker
endif

if HAVE_VUEXTRAS
SUBDIRS += VuChromium libvupldemo witaispeechtotext WebkitHbbTV VuBluetoothSetup VuStalker
endif

if HAVE_GBEXTRAS
SUBDIRS += GigaBlueChromium GigaBlueBluetoothSetup
endif

if HAVE_PYTHON3
SUBDIRS += PiconManager
endif
